create user message error

--- a/frontend/src/app/pages/transaction/transaction.html
+++ b/frontend/src/app/pages/transaction/transaction.html
@@ -4,7 +4,7 @@
     <nz-form-item>
       <nz-form-control [nzSpan]="8">
         <nz-form-label>Valor em R$</nz-form-label>
-        <nz-input-number class="input-component" nzPlaceHolder="R$" formControlName="amount" nzStep="0.01" />
+        <nz-input-number class="input-component" nzPlaceHolder="R$" formControlName="amount" nzStep="0.01" nzMin="0" />
       </nz-form-control>
     </nz-form-item>
 
